--- a/css/site/contact-form.css
+++ b/css/site/contact-form.css
@@ -128,13 +128,14 @@
 
 #contactform--section #form--right #form--msg {
   width: 55%;
-  font-size: 10px;
+  font-size: 14px !important;
   float: left;
+  margin: 20px 0;
 }
 
 #contactform--section #form--right #form--msg a {
   color: #67ABA4;
-  font-size: 10px;
+  font-size: 14px !important;
 }
 
 @media screen and (max-width: 992px) {
