--- a/css/site/contact-form.css
+++ b/css/site/contact-form.css
@@ -79,9 +79,8 @@
   #contactform--section #form--right {
     position: relative;
     top: 50px;
-    padding-bottom: 80px;
     padding: 20px;
-    padding-bottom: 100px;
+    padding-bottom: 200px;
   }
 }
 
@@ -114,10 +113,19 @@
   background: #67ABA4;
   color: white;
   border-radius: 50px;
-  padding: 10px 40px;
+  padding: 15px 50px;
   float: right;
   margin-top: 10px;
   position: relative;
+  transition: 0.4s ease;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+#contactform--section #form--right .btn:hover {
+  color: #67ABA4;
+  background: rgb(247, 247, 247);
 }
 
 @media screen and (max-width: 992px) {
