--- a/css/site/home.css
+++ b/css/site/home.css
@@ -68,6 +68,12 @@ body {
     font-size: 14px;
     font-weight: 400;
     outline: none !important;
+    transition: 0.4s ease;
+}
+
+.home-hero button:hover {
+    background: #67ABA4;
+    color: white;
 }
 
 /* Home Blocks */
@@ -157,10 +163,18 @@ body {
     background: #67ABA4;
     color: white;
     border-radius: 50px;
-    padding: 10px 40px;
+    padding: 16px 50px;
     float: left;
-    margin-top: 15px;
+    margin-top: 30px;
     position: relative;
+    font-size: 15px;
+    font-weight: 400;
+    transition: 0.4s ease;
+}
+
+.behandelingbutton:hover {
+    color: #67ABA4;
+    background: rgb(247, 247, 247);
 }
 
 @media only screen and (max-width: 992px) {
